--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         }
         .container {
             text-align: center;
+            /* Adicionado um pouco de espaço para melhor visualização */
+            display: flex;
+            flex-direction: column; 
+            gap: 20px; /* Espaço entre os botões */
         }
         .container a {
             display: inline-block;
@@ -32,6 +36,8 @@
             background-color: #d11a2d;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            /* Garante que ambos os botões tenham a mesma largura se necessário */
+            min-width: 200px;
         }
     </style>
 </head>
@@ -39,8 +45,9 @@
 
     <div class="container">
         <a href="https://gruponso-my.sharepoint.com/personal/cristiano_santos_urubupunga_com_br/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fcristiano%5Fsantos%5Furubupunga%5Fcom%5Fbr%2FDocuments%2FRelat%C3%B3rios%20de%20ponto%5Fexcel%2FREL%5FFISCAIS%5FAVUL%28EM%20USO%29&ga=1">IR PARA RELATÓRIOS</a>
+        
+        <a href="https://forms.office.com/r/dhibquxks5" target="_blank">INSPEÇÕES DE 5S - FROTA DE SANTANA DE PARNAÍBA</a>
     </div>
 
 </body>
 </html>
-
