--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang='pt-br'>
 <head>
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Relatórios Urubupungá</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="icon" href="icon.png">
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+    <link rel='icon' href='icon.png'>
+    <link rel='apple-touch-icon' href='icon.png'>
+    <link rel='manifest' href='manifest.json'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css'>
     <style>
         body {
             font-family: sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            height: 100vh;
+            background: url('banner-home-frota.png') no-repeat center center fixed;
+            background-size: cover;
+            position: relative;
+        }
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background-color: rgba(255, 255, 255, 0.25);
+            z-index: 0;
+        }
+        .header {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 28px;
         }
         .container {
-            text-align: center;
+            position: relative;
+            z-index: 1;
             display: flex;
             flex-direction: column;
-            gap: 80px;
+            align-items: center;
+            gap: 30px;
+            padding: 40px 20px;
         }
         .container a {
             display: inline-block;
@@ -38,7 +55,15 @@
             background-color: #d11a2d;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            min-width: 250px;
+            min-width: 280px;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+        .container a i {
+            margin-right: 10px;
+        }
+        .container a:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
         .disabled {
             pointer-events: none;
@@ -48,32 +73,40 @@
     </style>
 </head>
 <body>
-
-    <div class="container">
-        <a href="https://gruponso-my.sharepoint.com/personal/cristiano_santos_urubupunga_com_br/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fcristiano%5Fsantos%5Furubupunga%5Fcom%5Fbr%2FDocuments%2FRelat%C3%B3rios%20de%20ponto%5Fexcel%2FREL%5FFISCAIS%5FAVUL%28EM%20USO%29&ga=1">
-            <i class="fas fa-file-excel"></i> IR PARA RELATÓRIOS
-        </a>
-
-        <a id="btn5s" href="https://forms.office.com/r/bkeF1EwmNC">
-            <i class="fas fa-clipboard-check"></i> INSPEÇÕES DE 5S - FROTA DE OSASCO
-        </a>
+    <div class='header'>
+        <h1><i class='fas fa-clipboard-list'></i> Relatórios Urubupungá</h1>
     </div>
-
+    <div class='container'>
+        <a href='https://gruponso-my.sharepoint.com/:f:/r/personal/cristiano_santos_urubupunga_com_br/Documents/Relat%C3%B3rios%20de%20ponto_excel/REL_FISCAIS_AVUL(EM%20USO)?csf=1&web=1&e=wGYzAN'><i class='fas fa-file-excel'></i> IR PARA RELATÓRIOS</a>
+        <a id='btn-osasco' href='https://forms.office.com/r/bkeF1EwmNC'><i class='fas fa-clipboard-check'></i> INSPEÇÕES DE 5S - FROTA DE OSASCO</a>
+        <a href='https://forms.office.com/r/DFBt9eC2pX'><i class='fas fa-lightbulb'></i> USINA DE IDEIAS</a>
+        <a id='btn-parnaiba' href='https://forms.office.com/r/dhibquxks5'><i class='fas fa-clipboard-check'></i> 5S - FROTA DE SANTANA DE PARNAÍBA</a>
+        <a href='https://forms.office.com/r/AKQCs8XCiF'><i class='fas fa-file-alt'></i> RELATÓRIO DE RTO</a>
+        <a href='https://forms.office.com/r/v4BMhNHbSR'><i class='fas fa-ban'></i> CLANDESTINOS - RUA MELVIN JONES</a>
+        <a id='btn-comunicacao' href='#' class='disabled' title='Em construção'><i class='fas fa-bullhorn'></i> COMUNICAÇÃO INTERNA</a>
+    </div>
     <script>
-        // Data de liberação: 15 de novembro de 2025
-        const releaseDate = new Date("2025-11-15");
-        const today = new Date();
-        const btn5s = document.getElementById("btn5s");
+        const now = new Date();
+        const osascoDate = new Date('2026-02-01');
+        const parnaibaDate = new Date('2026-02-01');
 
-        if (today < releaseDate) {
-            btn5s.classList.add("disabled");
-            btn5s.setAttribute("title", "Disponível após 15/11/2025");
-            btn5s.setAttribute("href", "#");
+        if (now < osascoDate) {
+            const btn = document.getElementById('btn-osasco');
+            btn.classList.add('disabled');
+            btn.setAttribute('href', '#');
+            btn.setAttribute('title', 'Disponível após 01/02/2026');
+        }
+
+        if (now < parnaibaDate) {
+            const btn = document.getElementById('btn-parnaiba');
+            btn.classList.add('disabled');
+            btn.setAttribute('href', '#');
+            btn.setAttribute('title', 'Disponível após 01/02/2026');
         }
     </script>
-
 </body>
 </html>
+
 
 
 
