--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang="pt-br">
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Relatórios Urubupungá</title>
-    <link rel='icon' href='icon.png'>
-    <link rel='apple-touch-icon' href='icon.png'>
-    <link rel='manifest' href='manifest.json'>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PWA Urubupungá</title>
+    <link rel="icon" href="icon.png">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
             font-family: sans-serif;
@@ -20,22 +20,9 @@
         body::before {
             content: "";
             position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background-color: rgba(255, 255, 255, 0.25);
+            top: 0; left: 0; right: 0; bottom: 0;
+            background-color: rgba(255, 255, 255, 0.75);
             z-index: 0;
-        }
-        .header {
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-        }
-        .header h1 {
-            margin: 0;
-            font-size: 28px;
         }
         .container {
             position: relative;
@@ -43,73 +30,124 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 30px;
-            padding: 40px 20px;
+            justify-content: center;
+            height: 100%;
+            gap: 20px;
+            padding: 20px;
         }
-        .container a {
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        header h1 {
+            font-size: 28px;
+            color: #333;
+        }
+        .button {
+            position: relative;
             display: inline-block;
             padding: 15px 30px;
             font-size: 18px;
-            text-decoration: none;
             color: #fff;
             background-color: #d11a2d;
             border-radius: 12px;
+            text-decoration: none;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            min-width: 280px;
-            transition: transform 0.2s, box-shadow 0.2s;
+            min-width: 260px;
+            text-align: center;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
-        .container a i {
-            margin-right: 10px;
-        }
-        .container a:hover {
+        .button:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
-        .disabled {
+        .button.disabled {
             pointer-events: none;
             opacity: 0.5;
             cursor: not-allowed;
         }
+        .tooltip {
+            visibility: hidden;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 8px;
+            position: absolute;
+            z-index: 2;
+            bottom: 125%;
+            left: 50%;
+            transform: translateX(-50%) translateY(10px);
+            opacity: 0;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+            white-space: nowrap;
+        }
+        .button:hover .tooltip,
+        .button.touch .tooltip {
+            visibility: visible;
+            opacity: 1;
+            transform: translateX(-50%) translateY(0);
+        }
     </style>
 </head>
 <body>
-    <div class='header'>
-        <h1><i class='fas fa-clipboard-list'></i> Relatórios Urubupungá</h1>
+    <div class="container">
+        <header>
+            <h1><i class="fas fa-clipboard-list"></i> Painel de Acessos</h1>
+        </header>
+
+        <a class="button" href="https://gruponso-my.sharepoint.com/personal/cristiano_santos_urubupunga_com_br/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fcristiano%5Fsantos%5Furubupunga%5Fcom%5Fbr%2FDocuments%2FRelat%C3%B3rios%20de%20ponto%5Fexcel%2FREL%5FFISCAIS%5FAVUL%28EM%20USO%29&ga=1">
+            <i class="fas fa-file-excel"></i> IR PARA RELATÓRIOS
+        </a>
+
+        <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
+            <i class="fas fa-clipboard-check"></i> INSPEÇÕES DE 5S - FROTA DE OSASCO
+        </a>
+
+        <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
+            <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
+        </a>
+
+        <a class="button" id="btn-ideias" href="https://forms.office.com/r/DFBt9eC2pX">
+            <i class="fas fa-lightbulb"></i> USINA DE IDEIAS
+            <span class="tooltip">Registre sua ideia e concorra a prêmios</span>
+        </a>
+
+        <a class="button" href="https://forms.office.com/r/AKQCs8XCiF">
+            <i class="fas fa-file-alt"></i> RELATÓRIO DE RTO
+        </a>
+
+        <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
+            <i class="fas fa-ban"></i> CLANDESTINOS - RUA MELVIN JONES
+        </a>
+
+        <a class="button disabled" href="#">
+            <i class="fas fa-bullhorn"></i> COMUNICAÇÃO INTERNA (EM CONSTRUÇÃO)
+        </a>
     </div>
-    <div class='container'>
-        <a href='https://gruponso-my.sharepoint.com/my?id=%2Fpersonal%2Fcristiano%5Fsantos%5Furubupunga%5Fcom%5Fbr%2FDocuments%2FRelat%C3%B3rios%20de%20ponto%5Fexcel%2FREL%5FFISCAIS%5FAVUL%28EM%20USO%29&viewid=38d049f1%2Ddf41%2D4590%2D89db%2Dc1d3407a16e7&csf=1&web=1&e=wGYzAN&CID=c3bd25d9%2D2e28%2D4eb6%2Da6f1%2Dd8f1d41f6880&FolderCTID=0x012000B5AF01E910F535419FE9C29551A35C2B'><i class='fas fa-file-excel'></i> IR PARA RELATÓRIOS</a>
-        <a id='btn-osasco' href='https://forms.office.com/r/bkeF1EwmNC'><i class='fas fa-clipboard-check'></i> INSPEÇÕES DE 5S - FROTA DE OSASCO</a>
-        <a href='https://forms.office.com/r/DFBt9eC2pX'><i class='fas fa-lightbulb'></i> USINA DE IDEIAS</a>
-        <a id='btn-parnaiba' href='https://forms.office.com/r/dhibquxks5'><i class='fas fa-clipboard-check'></i> 5S - FROTA DE SANTANA DE PARNAÍBA</a>
-        <a href='https://forms.office.com/r/AKQCs8XCiF'><i class='fas fa-file-alt'></i> RELATÓRIO DE RTO</a>
-        <a href='https://forms.office.com/r/v4BMhNHbSR'><i class='fas fa-ban'></i> CLANDESTINOS - RUA MELVIN JONES</a>
-        <a id='btn-comunicacao' href='#' class='disabled' title='Em construção'><i class='fas fa-bullhorn'></i> COMUNICAÇÃO INTERNA</a>
-    </div>
+
     <script>
+        const disableDates = {
+            'btn-osasco': new Date('2025-11-15'),
+            'btn-santana': new Date('2026-02-01')
+        };
+
         const now = new Date();
-        const osascoDate = new Date('2026-02-01');
-        const parnaibaDate = new Date('2026-02-01');
-
-        if (now < osascoDate) {
-            const btn = document.getElementById('btn-osasco');
-            btn.classList.add('disabled');
-            btn.setAttribute('href', '#');
-            btn.setAttribute('title', 'Disponível após 01/02/2026');
+        for (const [id, date] of Object.entries(disableDates)) {
+            const btn = document.getElementById(id);
+            if (now < date) {
+                btn.classList.add('disabled');
+                btn.setAttribute('href', '#');
+                btn.setAttribute('title', `Disponível após ${date.toLocaleDateString()}`);
+            }
         }
 
-        if (now < parnaibaDate) {
-            const btn = document.getElementById('btn-parnaiba');
-            btn.classList.add('disabled');
-            btn.setAttribute('href', '#');
-            btn.setAttribute('title', 'Disponível após 01/02/2026');
-        }
+        // Touch support for tooltip
+        const tooltipBtn = document.getElementById('btn-ideias');
+        tooltipBtn.addEventListener('touchstart', () => {
+            tooltipBtn.classList.add('touch');
+            setTimeout(() => tooltipBtn.classList.remove('touch'), 2000);
+        });
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
