--- a/index.html
+++ b/index.html
@@ -97,15 +97,7 @@
         </header>
 
         <a class="button" href="https://gruponso-my.sharepoint.com/personal/cristiano_santos_urubupunga_com_br/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fcristiano%5Fsantos%5Furubupunga%5Fcom%5Fbr%2FDocuments%2FRelat%C3%B3rios%20de%20ponto%5Fexcel%2FREL%5FFISCAIS%5FAVUL%28EM%20USO%29&ga=1">
-            <i class="fas fa-file-excel"></i> IR PARA RELATÓRIOS
-        </a>
-
-        <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
-            <i class="fas fa-clipboard-check"></i> INSPEÇÕES DE 5S - FROTA DE OSASCO
-        </a>
-
-        <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
-            <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
+            <i class="fas fa-file-excel"></i> IR PARA RELATÓRIOS DE FISCAL
         </a>
 
         <a class="button" id="btn-ideias" href="https://forms.office.com/r/DFBt9eC2pX">
@@ -118,7 +110,15 @@
         </a>
 
         <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
-            <i class="fas fa-ban"></i> CLANDESTINOS - RUA MELVIN JONES
+            <i class="fas fa-ban"></i> RUA MELVIN JONES - CLANDESTINOS
+        </a>
+
+        <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
+            <i class="fas fa-clipboard-check"></i> 5S - FROTA DE OSASCO
+        </a>
+
+        <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
+            <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
         </a>
 
         <a class="button disabled" href="#">
