--- a/index.html
+++ b/index.html
@@ -88,6 +88,43 @@
             opacity: 1;
             transform: translateX(-50%) translateY(0);
         }
+        /* Estilos para modais */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 10;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 80%;
+            max-width: 400px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+        .close {
+            color: #aaa;
+            align-self: flex-end;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -105,25 +142,46 @@
             <span class="tooltip">Registre sua ideia e concorra a prêmios</span>
         </a>
 
-        <a class="button" href="https://forms.office.com/r/AKQCs8XCiF">
-            <i class="fas fa-file-alt"></i> RELATÓRIO DE RTO
-        </a>
-
-        <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
-            <i class="fas fa-ban"></i> RUA MELVIN JONES - CLANDESTINOS
-        </a>
-
-        <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
-            <i class="fas fa-clipboard-check"></i> 5S - FROTA DE OSASCO
-        </a>
-
-        <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
-            <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
-        </a>
-
         <a class="button disabled" href="#">
             <i class="fas fa-bullhorn"></i> COMUNICAÇÃO INTERNA (EM CONSTRUÇÃO)
         </a>
+
+        <a class="button" id="btn-clandestinos-rto" href="#">
+            <i class="fas fa-ban"></i> CLANDESTINOS E RTO
+        </a>
+
+        <a class="button" id="btn-inspecoes-5s" href="#">
+            <i class="fas fa-clipboard-check"></i> INSPEÇÕES DE 5S
+        </a>
+    </div>
+
+    <!-- Modal para Clandestinos e RTO -->
+    <div id="modal-clandestinos-rto" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal-clandestinos-rto')">&times;</span>
+            <a class="button" href="https://forms.office.com/r/AKQCs8XCiF">
+                <i class="fas fa-file-alt"></i> RELATÓRIO DE RTO
+            </a>
+            <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
+                <i class="fas fa-ban"></i> RUA MELVIN JONES - CLANDESTINOS
+            </a>
+            <a class="button" href="https://forms.office.com/r/JF8tPFysX6">
+                <i class="fas fa-ban"></i> CLANDESTINOS - CAJAMAR
+            </a>
+        </div>
+    </div>
+
+    <!-- Modal para Inspeções de 5S -->
+    <div id="modal-inspecoes-5s" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal-inspecoes-5s')">&times;</span>
+            <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
+                <i class="fas fa-clipboard-check"></i> 5S - FROTA DE OSASCO
+            </a>
+            <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
+                <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
+            </a>
+        </div>
     </div>
 
     <script>
@@ -147,6 +205,33 @@
         tooltipBtn.addEventListener('touchstart', () => {
             tooltipBtn.classList.add('touch');
             setTimeout(() => tooltipBtn.classList.remove('touch'), 2000);
+        });
+
+        // Funções para modais
+        function openModal(modalId) {
+            document.getElementById(modalId).style.display = 'flex';
+        }
+
+        function closeModal(modalId) {
+            document.getElementById(modalId).style.display = 'none';
+        }
+
+        // Eventos para abrir modais
+        document.getElementById('btn-clandestinos-rto').addEventListener('click', (e) => {
+            e.preventDefault();
+            openModal('modal-clandestinos-rto');
+        });
+
+        document.getElementById('btn-inspecoes-5s').addEventListener('click', (e) => {
+            e.preventDefault();
+            openModal('modal-inspecoes-5s');
+        });
+
+        // Fechar modal ao clicar fora do conteúdo
+        window.addEventListener('click', (e) => {
+            if (e.target.classList.contains('modal')) {
+                e.target.style.display = 'none';
+            }
         });
     </script>
 </body>
