Add INSPETORES button and update styles
Added a new button for 'INSPETORES' and updated styles.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
             color: black;
             text-decoration: none;
         }
+        /* Nova cor para o botão de segunda tela */
+        #btn-segunda-tela {
+            background-color: #ff4500; /* Laranja */
+        }
     </style>
 </head>
 <body>
@@ -142,16 +146,20 @@
             <span class="tooltip">Registre sua ideia e concorra a prêmios</span>
         </a>
 
-        <a class="button disabled" href="#">
-            <i class="fas fa-bullhorn"></i> COMUNICAÇÃO INTERNA (EM CONSTRUÇÃO)
-        </a>
-
         <a class="button" id="btn-clandestinos-rto" href="#">
             <i class="fas fa-ban"></i> CLANDESTINOS E RTO
         </a>
 
         <a class="button" id="btn-inspecoes-5s" href="#">
             <i class="fas fa-clipboard-check"></i> INSPEÇÕES DE 5S
+        </a>
+
+        <a class="button disabled" href="#">
+            <i class="fas fa-bullhorn"></i> COMUNICAÇÃO INTERNA (EM CONSTRUÇÃO)
+        </a>
+
+        <a class="button disabled" id="btn-segunda-tela" href="#">
+            <i class="fas fa-lock"></i> INSPETORES>>>>
         </a>
     </div>
 
