Add phone update button and tooltips
Added a new button for updating phone numbers and updated existing buttons with tooltips.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <span class="tooltip">Registre sua ideia e concorra a prêmios</span>
         </a>
 
+        <a class="button" id="btn-telefones" href="https://forms.office.com/r/Vr3tWmLyv2">
+            <i class="fas fa-phone"></i> ATUALIZAÇÃO DE TELEFONES
+            <span class="tooltip">Atualize seus dados de contato</span>
+        </a>
+
         <a class="button" id="btn-clandestinos-rto" href="#">
             <i class="fas fa-ban"></i> CLANDESTINOS E RTO
         </a>
@@ -123,5 +128,6 @@
     </script>
 </body>
 </html>
+
 
 
