Fix HTML structure and update button links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
 
         <a class="button" id="btn-clandestinos-rto" href="#">
-            <i class="fas fa-ban"></i> CLANDESTINOS E RTO
+            <i class="fas fa-ban"></i> CLANDESTINOS Osasco e CAJAMAR
         </a>
 
         <a class="button" id="btn-inspecoes-5s" href="#">
@@ -50,10 +50,6 @@
     <!-- Modal para Clandestinos e RTO -->
     <div id="modal-clandestinos-rto" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-clandestinos-rto')">&times;</span>
-            <a class="button" href="https://forms.office.com/r/AKQCs8XCiF">
-                <i class="fas fa-file-alt"></i> RELATÓRIO DE RTO
-            </a>
             <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
                 <i class="fas fa-ban"></i> RUA MELVIN JONES - CLANDESTINOS
             </a>
@@ -79,7 +75,7 @@
     <script>
         const disableDates = {
             'btn-osasco': new Date('2026-02-05'),
-            'btn-santana': new Date('2026-02-05')
+            'btn-santana': new Date('2026-02-03')
         };
 
         const now = new Date();
@@ -128,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
