Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
 
         <a class="button" id="btn-clandestinos-rto" href="#">
-            <i class="fas fa-ban"></i> CLANDESTINOS Osasco e CAJAMAR
+            <i class="fas fa-ban"></i> CLANDESTINOS OSASCO e CAJAMAR
         </a>
 
         <a class="button" id="btn-inspecoes-5s" href="#">
@@ -124,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
