Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <span class="close" onclick="closeModal('modal-inspecoes-5s')">&times;</span>
             <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
                 <i class="fas fa-clipboard-check"></i> 5S - FROTA DE OSASCO
+                <span class="tooltip">Inicia em 19/02/2026</span>
             </a>
             <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
                 <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
@@ -74,7 +75,7 @@
 
     <script>
         const disableDates = {
-            'btn-osasco': new Date('2026-02-05'),
+            'btn-osasco': new Date('2026-02-19'),
             'btn-santana': new Date('2026-02-03')
         };
 
@@ -124,6 +125,7 @@
     </script>
 </body>
 </html>
+
 
 
 
