Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </a>
     </div>
 
-    <!-- Modal para Clandestinos e RTO -->
+    <!-- Modal para Clandestinos-->
     <div id="modal-clandestinos-rto" class="modal">
         <div class="modal-content">
             <a class="button" href="https://forms.office.com/r/v4BMhNHbSR">
@@ -65,7 +65,6 @@
             <span class="close" onclick="closeModal('modal-inspecoes-5s')">&times;</span>
             <a class="button" id="btn-osasco" href="https://forms.office.com/r/bkeF1EwmNC">
                 <i class="fas fa-clipboard-check"></i> 5S - FROTA DE OSASCO
-                <span class="tooltip">Inicia em 19/02/2026</span>
             </a>
             <a class="button" id="btn-santana" href="https://forms.office.com/r/dhibquxks5">
                 <i class="fas fa-clipboard-check"></i> 5S - FROTA SANTANA DE PARNAÍBA
@@ -125,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
